Correction de l'alignement sur mobile

--- a/src/components/Timer/Timer.css
+++ b/src/components/Timer/Timer.css
@@ -43,6 +43,10 @@ h1 {
     .symbol {
         display: none;
     }
+
+    .value {
+        text-align: center;
+    }
 }
 
 @media(min-width: 400px) {
